# plover_roll_the_dice

./: README.md  setup.cfg
roll_the_dice/: __init__.py  choice.py  dice.py  eight_ball.py  roll.py
test/: test_roll.py
