[metadata]
name = plover_roll_the_dice
version = 0.0.1
description = Plover text macros to roll dice, flip a coin, and take chances.
long_description = file: README.md
author = Ted Morin
author_email = morinted@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/morinted/plover_roll_the_dice
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
packages =
    roll_the_dice

[options.entry_points]
plover.meta =
    roll = roll_the_dice.roll:meta

[tool:pytest]
python_files = test/test_*.py